<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".DecryptCodeActivity">

    <LinearLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBar_height"
        android:background="@android:color/white">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:background="@drawable/back_button_bg"
            android:src="@drawable/ic_arrow"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/decrypt"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:gravity="center"
            android:fontFamily="@font/light_font"
            android:paddingHorizontal="12dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:padding="15dp">
            <LinearLayout
                android:id="@+id/decode_card_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:layout_marginVertical="5dp"
                android:background="@drawable/card_bg"
                >

                <LinearLayout
                    android:id="@+id/decode_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/decode"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>
                    <ImageView
                        android:id="@+id/decode_arrow_iv"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic_down_arrow"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/decode_data_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/decode_type_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/light_font"
                        android:text="@string/qr_code_data"
                        android:textSize="14sp"
                        android:paddingHorizontal="5dp"/>

                    <LinearLayout
                        android:id="@+id/decode_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textIsSelectable="true"
                        android:padding="10dp"
                        android:orientation="horizontal"
                        android:background="@drawable/tv_bg"/>

                    <LinearLayout
                        android:id="@+id/decode_copy_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        >
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/copy_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/copy"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/white"
                            android:textAllCaps="false"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/decrypt_card_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true"
                android:layout_marginVertical="5dp"
                android:background="@drawable/card_bg">

                <LinearLayout
                    android:id="@+id/decrypt_card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/decrypt"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"/>
                    <ImageView
                        android:id="@+id/decrypt_arrow_iv"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/ic_down_arrow"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/decrypt_data_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/light_font"
                        android:text="@string/select_scheme"
                        android:textSize="14sp"
                        android:paddingHorizontal="5dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_marginBottom="15dp">
                        <Spinner
                            android:id="@+id/decrypt_scheme_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:spinnerMode="dialog"

                            android:background="@android:color/transparent"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:padding="10dp"/>
                        <ImageView
                            android:layout_width="10dp"
                            android:layout_height="10dp"
                            android:src="@drawable/ic_down_arrow"
                            android:tint="@android:color/black"
                            android:rotation="180"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"/>
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:fontFamily="@font/light_font"
                        android:text="@string/decrypted_data"
                        android:textSize="14sp"
                        android:paddingHorizontal="5dp"/>

                    <TextView
                        android:id="@+id/decrypt_data_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:textIsSelectable="true"
                        android:padding="10dp"
                        android:background="@drawable/tv_bg"/>

                    <LinearLayout
                        android:id="@+id/decrypt_copy_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:background="@drawable/button_bg"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:layout_marginVertical="10dp"
                        >
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="5dp"
                            android:src="@drawable/copy_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/copy"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="5dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/white"
                            android:textAllCaps="false"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>